--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle' // added plugin
     id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
@@ -28,14 +29,19 @@ test {
 }
 
 application {
-    mainClass.set("seedu.duke.Duke")
+    mainClass.set("aladdin.Aladdin") // changed from seedu.duke.Duke
 }
 
 shadowJar {
-    archiveBaseName = "duke"
+    archiveBaseName = "aladdin" // changed from duke
     archiveClassifier = null
 }
 
 run{
     standardInput = System.in
+}
+
+// Added
+checkstyle {
+    toolVersion = '11.0.0'
 }
