--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ application {
 
 shadowJar {
     archiveBaseName = "aladdin" // changed from duke
+    archiveVersion = "v0.1" // or specify FileName
     archiveClassifier = null
 }
 
